--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ footer{
     background:#4aaaa5;
     opacity:0.8;
 }
-.col-md-3 a p {
+.col-md-3 a {
     color:#fff !important;
     text-decoration: none !important;
 }
